--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 fastapi = {extras = ["standard"], version = "*"}
 sqlmodel = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
